my-nginx/my-nginx-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx
  labels:
    app: my-nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
