my-nginx/web-deploy-alt.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: dev
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web-hw
        image: docker-registry.invitro.ru/web-test:latest
        ports:
        - containerPort: 80
          protocol: TCP
