my-nginx/web-deploy.yaml
---
apiVersion: v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web-hw
        image: playbackpr/web:01
        ports:
        - containerPort: 80
          protocol: TCP
