my-nginx/web-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  labels:
    app: web
spec:
  containers:
    - name: web-hw
      image: playbackpr/web:01
      ports:
        - containerPort: 80
