my-nginx/my-nginx-service-np.yaml
---
apiVersion: v1
kind: Service
metadata:
   name: nginx-service-np
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31112
  selector:
    app: my-nginx
