my-nginx/web-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web
  type: ClusterIP
