my-nginx/web-service-np.yaml
---
apiVersion: v1
kind: Service
metadata:
   name: web-service-np
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31111
  selector:
    app: web
