my-nginx/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress-nginx
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: testkube.invitro.ru
    http:
      paths:
      - backend:
          serviceName: web-service
          servicePort: 80
